--- a/public-cms/app/_themes/tuning-basic.css
+++ b/public-cms/app/_themes/tuning-basic.css
@@ -9,6 +9,9 @@ hr {
   margin-top: 6px;
   margin-bottom: 7px;
 }
+a:hover {
+  text-decoration: none;
+}
 
 /*---- Helpers -----*/
 .font-monospace {
@@ -49,6 +52,15 @@ hr {
 }
 
 /* ---- NAVBAR ----- */
+/* height */
+.navbar-nav > li > a, .navbar-brand {
+    padding-top:7px !important;
+    padding-bottom:0 !important;
+    height: 36px;
+}
+.navbar {min-height:36px !important;}
+
+/*---*/
 .dropdown-menu>li>a {
   padding: 9px 15px;
 }
